grav/user/themes/quark/scss/template/_social-icons.scss
#footer {

/* Wrapper */
.icon-button {
	background-color: white;
	border-radius: 3rem;
	cursor: pointer;
	display: inline-block;
	font-size: 2rem;
	height: 3rem;
	line-height: 3rem;
	margin: 8px;
	position: relative;
	text-align: center;
	-webkit-user-select: none;
	   -moz-user-select: none;
	    -ms-user-select: none;
	        user-select: none;
	width: 3rem;
}

/* Circle */
.icon-button span {
	border-radius: 0;
	display: block;
	height: 0;
	left: 50%;
	margin: 0;
	position: absolute;
	top: 50%;
	-webkit-transition: all 0.3s;
	   -moz-transition: all 0.3s;
	     -o-transition: all 0.3s;
	        transition: all 0.3s;
	width: 0;
}
.icon-button:hover span {
	width: 3rem;
	height: 3rem;
	border-radius: 3rem;
	margin: -1.5rem;
}

/* Icons */
.icon-button i {
	background: none;
	color: white;
	height: 3rem;
	left: 0;
	line-height: 3rem;
	position: absolute;
	top: 0;
	-webkit-transition: all 0.3s;
	   -moz-transition: all 0.3s;
	     -o-transition: all 0.3s;
	        transition: all 0.3s;
	width: 3rem;
	z-index: 10;
        text-decoration: none;
}

@media screen and (max-width: 840px) {
    .icon-button {
        font-size: 3rem;
        height: 4rem;
        width: 4rem;
        i {
            height: 4rem;
            width: 4rem;
            line-height: 4rem;
        }
				&:hover span {
					width: 4rem;
					height: 4rem;
					border-radius: 4rem;
					margin: -2rem;
				}
    }
}





.twitter span {
	background-color: #4099ff;
}
.facebook span {
	background-color: #3B5998;
}
.google-plus span {
	background-color: #db5a3c;
}
.tumblr span {
	background-color: #34526f;
}
.instagram span {
	background-color: #517fa4;
}
.youtube span {
	background-color: #bb0000;
}
.pinterest span {
	background-color: #cb2027;
}



.icon-button .icon-twitter {
	color: #4099ff;
}
.icon-button .icon-facebook {
	color: #3B5998;
}
.icon-button .fa-tumblr {
	color: #34526f;
}
.icon-button .icon-google-plus {
	color: #db5a3c;
}
.icon-button .fa-instagram {
	color: #517fa4;
}
.icon-button .fa-youtube {
	color: #bb0000;
}
.icon-button .fa-pinterest {
	color: #cb2027;
}

.icon-button:hover .icon-twitter,
.icon-button:hover .icon-facebook,
.icon-button:hover .icon-google-plus,
.icon-button:hover .fa-tumblr,
.icon-button:hover .fa-instagram,
.icon-button:hover .fa-youtube,
.icon-button:hover .fa-pinterest {
	color: white;
}

}

